# RobotTakimiRepo

./: Adım Adım Haritalayici Robot.docx  Genel_Bakis.txt  LICENSE  OPENCV-Kurulum  README.md
2_diger/: digispark helper.docx
3D Tasarımlar/: ChangeLog.txt
3_HAAR_Training/: 00_haarTrainingUzerineNotlar.txt  00_notesOnHaarTraining.txt  01_orbDetectionTestProgram.py  02_haarTrainingTestCode.py  cascade-15-not-shrinked.xml  cascade-75pos-200neg-stage18.xml  cascade-75pos-200neg-stage20.xml  cascade-75pos-200neg.xml
5_raspberryPi/: 01_nodejsYuklemek.txt  02_opencv2.4.11yuklemek.txt  03_linux_ssh_uzerinden_raspberryPi_a_baglanmak.txt  04_raspberrPi_a_ubuntu_arm_ve_ros_indigo_yuklemek.txt  05_raspberryPi_ubuntuArm_ros_indigo_ya_HECTOR_SLAM_rplidar_kurulumu.txt  06_laptopta_rviz_raspberryPida_hector_slam_calistirmak.txt  07_watinigForNetworkConnectionProblemi.txt  08_wifiAcikAccessPointeBaglanmak.txt  09_wifiAgaBaglanmak.txt  1_nodejsYuklemek.txt  2_opencv2.4.11yuklemek.txt
6_ROS/: rosUzerineGenelNotlar.txt
6_ROS/ROS_PAKETLER/bts_driver_move_command_adapter/: CMakeLists.txt  package.xml
6_ROS/ROS_PAKETLER/bts_driver_move_command_adapter/src/: bts_driver_move_command_adapter_node.cpp
6_ROS/ROS_PAKETLER/haritalayici_teleop/: CMakeLists.txt  package.xml
6_ROS/ROS_PAKETLER/haritalayici_teleop/launch/: configurable_haritalayici_teleop.launch  distributed_machines.machine  distributed_machines.machine~  haritalayici_teleop.launch  haritalayici_teleop_navigation.launch.save  haritalayici_teleop_slam.launch  haritalayici_teleop_slam.launch~  haritalayici_teleop_slam_4meterMaxRange.launch  haritalayici_teleop_slam_4meterMaxRange_hectorNav.launch  haritalayici_teleop_slam_4meterMaxRange_mpu6050_navigation.launch  haritalayici_teleop_slam_mpu6050_onLaptop.launch  haritalayici_teleop_slam_mpu6050_onRaspi.launch  haritalayici_teleop_slam_v2.launch  haritalayici_teleop_wifi.launch  notlar  standalone_haritalayici_teleop.launch
6_ROS/ROS_PAKETLER/haritalayici_teleop/src/: haritalayici_teleop_node.cpp
6_ROS/ROS_PAKETLER/uarm_basic_keyboard_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
6_ROS/ROS_PAKETLER/uarm_basic_keyboard_controller/arduino/: arduinoNode.ino
6_ROS/ROS_PAKETLER/uarm_basic_keyboard_controller/launch/: configurable_uarm_control.launch  standalone_uarm_control.launch  test_uarm.launch
6_ROS/ROS_PAKETLER/uarm_basic_keyboard_controller/src/: uarm_basic_keyboard_controller_node.cpp  uarm_basic_keyboard_controller_node.cpp~
Diger/: concatenation.txt
HAAR_Training/: OpenCV Kurulum  cascade-10-not-shrinked.xml  cascade-huge-stage6.xml  cascade-shrinked-100pos-225neg-stage14.xml  cascade.xml  (+5 more)
(+170 files in other folders)
